--- a/client/css/jukebox.css
+++ b/client/css/jukebox.css
@@ -1,6 +1,7 @@
 body {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-weight: 200;
+	font-size: 16px;
 	margin: 50px 0;
 	padding: 0;
 }
@@ -8,5 +9,21 @@ body {
 .main {
 	width: 600px;
 	margin: 0 auto;
+}
+
+.form-control::-webkit-input-placeholder {
+   color: #ccc;
+}
+
+.form-control:-moz-placeholder { /* Firefox 18- */
+   color: #ccc;
+}
+
+.form-control::-moz-placeholder {  /* Firefox 19+ */
+   color: #ccc;
+}
+
+.form-control:-ms-input-placeholder {
+   color: #ccc;
 }
 
