--- a/client/css/jukebox.css
+++ b/client/css/jukebox.css
@@ -11,6 +11,43 @@ body {
 	margin: 0 auto;
 }
 
+.song-row {
+	cursor: pointer;
+}
+
+.song-row:hover {
+	background: #eee;
+}
+
+.song-row.selected {
+	background: #88aaff;
+}
+
+	.song-row .remove-btn {
+		float: right;
+		line-height: 22px;
+		width: 22px;
+		text-align: center;
+	}
+
+	.song-row .remove-btn:hover {
+		color: red;
+	}
+
+.mejs-container {
+	margin: 0.6em auto;
+}
+
+.player-panel {
+	width: 100%;
+	height: 50px;
+	background: white;
+	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+	position: fixed;
+	bottom: 0;
+	left: 0;
+}
+
 .form-control::-webkit-input-placeholder {
    color: #ccc;
 }
