fix scrollable content hidden below player panel, adding some padding bottom to it

--- a/client/css/jukebox.css
+++ b/client/css/jukebox.css
@@ -2,7 +2,7 @@ body {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-weight: 200;
 	font-size: 16px;
-	padding: 0;
+	padding: 0 0 60px 0;
 }
 
 .header {
