--- a/client/css/jukebox.css
+++ b/client/css/jukebox.css
@@ -27,6 +27,7 @@ body {
 
 .song-row {
 	position: relative;
+	padding-left: 3.5em; /*some room for origin badge*/
 }
 
 .song-row:hover {
@@ -64,12 +65,14 @@ body {
 		display: block;
 		position: relative;
 		margin-right: 28px; /*for close button*/
+		padding: 0.2em;
 		padding-right: 80px; /*for date label*/
 		text-overflow: ellipsis;
 		white-space: nowrap;
 		overflow: hidden;
 		color: black;
 		text-decoration: none;
+		cursor: default;
 	}
 
 .song-name {
@@ -82,21 +85,27 @@ body {
 	right: 0;
 	color: #888;
 	font-size: 0.8em;
-	line-height: 28px;
+	padding: 0.2em;
 	width: 80px;
 	text-align: right;
 }
 
 .origin-badge {
-	display: inline-block;
+	position: absolute;
+	display: block;
+	padding: 0.2em;
+	left: 0;
 	width: 3em;
 	text-align: center;
 	font-weight: normal;
 	background: black;
 	color: white;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-	margin-right: 0.5em;
 }
+	.origin-badge:hover {
+		text-decoration: none;
+		color: #5AAEF7;
+	}
 
 .nct {
 	background: #3070ad;
