--- a/client/css/jukebox.css
+++ b/client/css/jukebox.css
@@ -38,42 +38,48 @@ body {
 	background: #88aaff;
 }
 
-	.song-row:hover .remove-btn {
-		opacity: 1;
-		pointer-events: auto;
-	}
+.song-row:hover .remove-btn,
+.song-row:hover .rebook-btn {
+	opacity: 1;
+	pointer-events: auto;
+}
 
-	.song-row .remove-btn {
-		position: absolute;
-		right: 0;
-		line-height: 28px;
-		width: 28px;
-		text-align: center;
-		opacity: 0;
-		pointer-events: none;
-		cursor: pointer;
-		-webkit-transition: opacity 0.3s ease-in;
-		-o-transition: opacity 0.3s ease-in;
-		transition: opacity 0.3s ease-in;
-	}
+.song-row .remove-btn,
+.song-row .rebook-btn {
+	position: absolute;
+	right: 0;
+	line-height: 28px;
+	width: 28px;
+	text-align: center;
+	opacity: 0;
+	pointer-events: none;
+	cursor: pointer;
+	-webkit-transition: opacity 0.3s ease-in;
+	-o-transition: opacity 0.3s ease-in;
+	transition: opacity 0.3s ease-in;
+}
 
-	.song-row .remove-btn:hover {
-		color: red;
-	}
+.song-row .remove-btn:hover {
+	color: red;
+}
 
-	.song-row .song-item {
-		display: block;
-		position: relative;
-		margin-right: 28px; /*for close button*/
-		padding: 0.2em;
-		padding-right: 80px; /*for date label*/
-		text-overflow: ellipsis;
-		white-space: nowrap;
-		overflow: hidden;
-		color: black;
-		text-decoration: none;
-		cursor: default;
-	}
+.song-row .rebook-btn:hover {
+	color: green;
+}
+
+.song-row .song-item {
+	display: block;
+	position: relative;
+	margin-right: 28px; /*for close button*/
+	padding: 0.2em;
+	padding-right: 80px; /*for date label*/
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	color: black;
+	text-decoration: none;
+	cursor: default;
+}
 
 .song-name {
 	text-overflow: ellipsis;
