--- a/client/css/jukebox.css
+++ b/client/css/jukebox.css
@@ -27,7 +27,7 @@ body {
 
 .song-row {
 	position: relative;
-	padding-left: 3.5em; /*some room for origin badge*/
+	padding-left: 44px; /*some room for origin badge*/
 }
 
 .song-row:hover {
@@ -63,7 +63,7 @@ body {
 	text-decoration: none;
 	position: absolute;
 	right: 0;
-	line-height: 28px;
+	line-height: 34px;
 	width: 28px;
 	text-align: center;
 	opacity: 0;
@@ -90,7 +90,8 @@ body {
 	display: block;
 	position: relative;
 	margin-right: 28px; /*for close button*/
-	padding: 0.2em;
+	height: 34px;
+	line-height: 34px;
 	padding-right: 80px; /*for date label*/
 	text-overflow: ellipsis;
 	white-space: nowrap;
@@ -110,7 +111,6 @@ body {
 	right: 0;
 	color: #888;
 	font-size: 0.8em;
-	padding: 0.2em;
 	width: 80px;
 	text-align: right;
 }
@@ -118,11 +118,13 @@ body {
 .origin-badge {
 	position: absolute;
 	display: block;
-	padding: 0.2em;
+	line-height: 34px;
+	height: 34px;
 	left: 0;
-	width: 3em;
+	width: 34px;
 	text-align: center;
 	font-weight: normal;
+	font-size: 0.8em;
 	background: black;
 	color: white;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
@@ -130,6 +132,13 @@ body {
 	.origin-badge:hover {
 		text-decoration: none;
 		color: #5AAEF7;
+	}
+
+	.origin-badge .thumb {
+		height: 30px;
+		border-radius: 2px;
+		margin-top: 2px;
+		vertical-align: 0;
 	}
 
 .nct {
