--- a/client/css/jukebox.css
+++ b/client/css/jukebox.css
@@ -86,6 +86,7 @@ input[type="text"]:focus {
 .navbar--item__input {
 	width: 70%;
 	padding: 7.5px 0;
+	position: relative;
 }
 .navbar--item__icon {
 	float: left;
@@ -98,56 +99,94 @@ input[type="text"]:focus {
 }
 
 .search-box {
-	padding: 8px 30px 8px 30px;
-	position: relative;
-	margin: 0;
+  position: absolute;
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid #49413f;
+  margin-top: 7.5px;
+  overflow: hidden;
+  background-color: #fcfcfc;
+}
+.search-box._active .search-box--result-wrapper {
+  display: block;
+}
+.search-box._active .search-box--control {
+  border-bottom: 1px solid gray;
+}
+.search-box--control {
+  position: relative;
 }
 .search-box--input-wrapper {
-	margin-right: 90px;
-	left: 0;
+  margin-right: 90px;
+  left: 0;
+}
+.search-box--result-wrapper {
+  display: none;
 }
 .search-box--submit {
-	color: #49413f;
-	background-color: #eadbcb;
-	border-color: #49413f;
-	margin-left: -4px;
-	width: 90px;
-	right: 30px;
-	position: absolute;
-	top: 8px;
-	padding: 0;
-	text-align: center;
+  color: #49413f;
+  background-color: #eadbcb;
+  margin-left: -4px;
+  width: 90px;
+  position: absolute;
+  padding: 0;
+  top: 0;
+  right: 0;
+  text-align: center;
+  border: 0;
+  border-radius: 0;
 }
 .search-box--submit:before {
-	content: 'Search';
+  content: 'Search';
 }
 .search-box--submit:hover {
-	background-color: #49413f;
-	border-color: #49413f;
-	color: white;
+  background-color: #49413f;
+  border-color: #49413f;
+  color: white;
 }
 .search-box--submit._active:before {
-	content: '...';
-	-webkit-animation: submit-moving .75s linear infinite;
-					animation: submit-moving .75s linear infinite;
+  content: '...';
+  -webkit-animation: submit-moving .75s linear infinite;
+          animation: submit-moving .75s linear infinite;
 }
 .search-box--input {
-	margin-bottom: 0;
-	display: inline-block;
+  margin-bottom: 0;
+  display: inline-block;
+  border-radius: 0;
 }
 .search-box .search-box--input {
-	border-top-right-radius: 0;
-	border-bottom-right-radius: 0;
-	border-right: 0;
-	border-color: #49413f;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-radius: 0;
+  border: 0;
 }
 .search-box .search-box--input:focus {
-	border-color: #49413f;
+  border: 0;
 }
 .search-box .search-box--submit {
-	border-top-left-radius: 0;
-	border-bottom-left-radius: 0;
-	border-left: 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-left: 0;
+}
+
+.song-result--list {
+  list-style-type: none;
+  margin: 0;
+}
+.song-result--item {
+  padding: 7.5px 15px;
+  margin-bottom: 0;
+  border-top: 1px solid whitesmoke;
+}
+.song-result--item:first-child {
+  margin-top: 15px;
+  border-top: 0;
+}
+.song-result--item._active,
+.song-result--item:hover {
+  background-color: #49413f;
+  color: white;
+  cursor: pointer;
 }
 
 .play-button {
