--- a/client/css/jukebox.css
+++ b/client/css/jukebox.css
@@ -4,19 +4,21 @@
  * -- element
  * __ modifier
  */
+* {
+	box-sizing: border-box;
+}
 
 html, body {
 	height: 100%;
 }
 
 html {
-	/* background-color: #dfc9b2; */
 	background-color: whitesmoke;
 }
 
 body {
-	min-height: 400px;
 	margin: 0;
+	padding-top: 69px; /*header height*/
 }
 
 form {
@@ -275,6 +277,7 @@ input[type="text"]:focus {
 
 .playlist-nav {
 	border-bottom: 1px solid #eadbcb;
+	background-color: white;
 }
 .playlist-nav--list {
 	list-style-type: none;
@@ -333,9 +336,7 @@ input[type="text"]:focus {
 }
 
 .scroll-content {
-	-webkit-overflow-scroll: touch;
-	margin-top: 69px;
-	background-color: white;
+	background-color: whitesmoke;
 }
 
 .main-content {
@@ -345,6 +346,7 @@ input[type="text"]:focus {
 .playlist--list {
 	list-style-type: none;
 }
+
 .playlist--item {
 	margin-bottom: 0;
 	border-bottom: 1px solid whitesmoke;
@@ -359,6 +361,29 @@ input[type="text"]:focus {
 	display: inline-block;
 	position: absolute;
 }
+
+.playlist--item--nct::after,
+.playlist--item--zing::after {
+	content: '';
+	position: absolute;
+	bottom: 1px;
+	left: 1px;
+	height: 100%;
+	width: 100%;
+	background-position: left bottom;
+    background-size: auto 10px;
+    background-repeat: no-repeat;
+    opacity: 0.8;
+}
+
+.playlist--item--nct::after {
+	background-image: url(logo-nct.png);
+}
+
+.playlist--item--zing::after {
+	background-image: url(logo-zing.png);
+}
+
 .playlist--item--origin img {
 	width: 100%;
 }
