--- a/client/css/jukebox.css
+++ b/client/css/jukebox.css
@@ -505,20 +505,28 @@ input[type="text"]:focus {
 .naustorm-elm--wrapper {
   position: relative;
   width: 100%;
+  overflow: hidden;
 }
 
 .naustorm-elm--cover {
   width: 100%;
   margin-bottom: 0;
   display: inherit;
-  filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
   -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 .naustorm-elm--cover:hover {
-  filter: grayscale(0%);
   -webkit-filter: grayscale(0%);
+  filter: grayscale(0%);
+  -webkit-transform: rotate(3deg) scale(1.1, 1.1);
+  transform: rotate(3deg) scale(1.1, 1.1);
 }
+.naustorm-elm--cover:hover ~ .naustorm-elm--listens {
+	opacity: 1;
+}
+
 .naustorm-elm--title {
   margin-bottom: 0;
   margin-top: 7.5px;
@@ -540,7 +548,10 @@ input[type="text"]:focus {
   color: white;
   z-index: 20;
   font-weight: 100;
-  font-size: 18px;
+  font-size: 16px;
+  opacity: 0.4;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 @-webkit-keyframes moving {
