fix some text, remove song animation

--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -572,6 +572,7 @@ input[type="text"]:focus {
 			margin-left: -7.5px;
 			opacity: 0;
 			transform: translate(-100%, -50%);
+			font-size: 30px;
     }
 
     &:hover {
