--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -22,6 +22,7 @@ $color-08: #F7EEBB;
 $color-06: rgba(255,255,255,0.2);
 $color-07: rgba(223,201,178,0.4);
 $color-09: rgba(211,211,211,1);
+$nau:			 #8c6b4b;
 
 * {
 	box-sizing: border-box;
@@ -405,8 +406,9 @@ input[type="text"]:focus {
   position: fixed;
   width: 100%;
   top: $header-h;
-  background-color: white;
+  background-color: rgba(140,107,75, 0.9);
   border-bottom: 1px solid rgba(0,0,0,0.1);
+  transition: top 0.3s ease;
   z-index: 99;
 
   &._focus {
@@ -426,15 +428,13 @@ input[type="text"]:focus {
 
     a {
       padding: $gutter;
-      color: black;
+      color: white;
       display: inline-block;
       text-decoration: none;
-      transition: all 0.5s;
-      opacity: 0.5;
+      transition: all 0.7s;
 
       &:hover {
-        background-color: whitesmoke;
-        opacity: 1;
+        background-color: rgb(140, 107, 75);
       }
     }
 
@@ -456,25 +456,25 @@ input[type="text"]:focus {
     &._active {
       position: relative;
       a {
-        opacity: 1;
+        background-color: rgb(140, 107, 75);
       }
 
-      &:after {
-        content: '_';
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        font-weight: 600;
-        font-size: 22px;
-        color: $color-04;
-      }
+      // &:after {
+      //   content: '_';
+      //   position: absolute;
+      //   bottom: 0;
+      //   left: 50%;
+      //   transform: translateX(-50%);
+      //   font-weight: 600;
+      //   font-size: 22px;
+      //   color: $color-04;
+      // }
 
-      &.playlist-nav--item__right {
-        &:after {
-          content: none;
-        }
-      }
+      // &.playlist-nav--item__right {
+      //   &:after {
+      //     content: none;
+      //   }
+      // }
     }
   }
 }
@@ -576,7 +576,7 @@ input[type="text"]:focus {
     }
 
     &:hover {
-      background-color: rgba(245,245,245,0.3);
+      background-color: rgb(245,245,245);
     }
   }
 }
