implement naucoin feature, checking user status

--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -740,10 +740,10 @@ h5 small {
     color: white;
     &:before {
       content: '₦';
+      margin-right: 4px;
     }
   }
 }
-
 
 .loader {
   position: absolute;
