checking online status of users

--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -81,6 +81,10 @@ h5 small {
   margin-left: 7.5px;
 }
 
+.u-hide {
+	display: none !important;
+}
+
 .input-control {
 	position: relative;
 	padding-bottom: 0.5*$gutter;
