Implement YouTubePlayer with mediaelementjs and some YT api

--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -129,7 +129,14 @@ h5 small {
 }
 
 .player-panel {
-	visibility: hidden;
+	position: fixed;
+	right: 0;
+	bottom: 0;
+
+	.mejs-audio {
+		visibility: hidden;
+	}
+
 }
 
 .bg-layer {
