--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -528,9 +528,7 @@ h5 small {
 			}
 		}
 
-    	&--nct::after,
-		&--zing::after,
-		&--sc::after {
+    	&--origin::after {
 			content: '';
 			position: absolute;
 			bottom: 1px;
@@ -552,7 +550,11 @@ h5 small {
 		}
 
 		&--sc::after {
-			background-image: url(logo-soundcloud.jpg);
+			background-image: url(logo-soundcloud.png);
+		}
+
+		&--yt::after {
+			background-image: url(logo-youtube.png);
 		}
 
 		&--link {
