--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -186,7 +186,6 @@ h5 small {
 		a {
 			display: block;
 			text-decoration: none;
-			margin-bottom: 4px;
 		}
 
 		&__icon,
@@ -202,14 +201,16 @@ h5 small {
 
 		&__icon {
 			float: left;
-			padding: 16px 0;
+			padding: 15px 0;
 			font-size: 12px;
 			line-height: 1;
 			letter-spacing: 2.5px;
 			font-weight: 600;
 
 			img {
-				height: 20px;
+				height: 40px;
+				display: block;
+				mix-blend-mode: multiply;
 			}
 		}
 		&__tool {
